# badge-website

./: .envrc  mkdocs.yml  pyproject.toml
.github/workflows/: CI.yml
docs/: SiNE.md  TiDAL.md  TiLDA.md  index.md
docs/TiLDA_MK3/: Badge16_Ideas.md  Introduction_to_badge_hacking.md  adc.md  build.md  index.md  rtc.md
docs/TiLDA_MK3/API/: index.md  spi.md  timer.md  ugfx.md  wifi.md
docs/TiLDA_MK3/Ideas/: Badge16_Ideas.md  index.md
docs/TiLDA_MK4/: Badge_Store_Submissions.md  Building_Firmware.md  Code_Structure.md  Factory_Reset.md  Get_Started.md  index.md  tilda-tools.md
docs/TiLDA_MK4/API/: grove.md  index.md  modtilda.md  ugfx.md
docs/TiLDA_MK4/sim800/: Reverse_engineering.md  index.md
docs/TiLDA_MKe/: FreeRTOS.md  index.md
docs/Tildagon/UHB-IF/: Issued_IDs.md  Uncontrolled_IDs.md  index.md
