[project]
name = "badge-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "codespell>=2.4.1",
    "flake8-markdown>=0.6.0",
    "mkdocs>=1.6.1",
    "mkdocs-git-committers-plugin>=0.2.3",
    "mkdocs-glightbox>=0.5.1",
    "mkdocs-include-markdown-plugin>=7.2.0",
    "mkdocs-material[imaging]>=9.6.21",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-nav-weight>=0.3.0",
    "mkdocs-spellcheck>=1.1.2",
]
